# SO-101-gripper-mask

./: README.md  pyproject.toml
docs/plans/: 2026-07-13-001-feat-gripper-mask-cli-plan.md
src/gripper_mask/: __init__.py  cli.py  files.py  gallery.py  pipeline.py
tests/: test_cli.py  test_gallery.py  test_pipeline.py
